# ECE552Project3

./: README.md
project2/: alu.v  imm.v  rf.v
project3/rtl/: decode.v  execute.v  fetch.v  hart.v  memory.v  writeback.v
project3/tb/: tb.v
project3/tests/asm/: Makefile
python-ece552/: pyproject.toml  pyrightconfig.json
python-ece552/ece552/: main.py  validate.py
python-ece552/ece552.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
python-ece552/ece552/validators/: __init__.py  behavioral_validator.py  operator_validator.py  validator.py
