[project]
name = "ece552"
version = "0.1.0"
description = "ECE 552 python tools"
authors = [
    { name = "Kalyan Sriram", email = "kgsriram@wisc.edu" }
]
requires-python = ">=3.10"
dependencies = [
    "prettyerr==0.0.0",
    "pyslang>=9.1.0",
]

[project.scripts]
ece552 = "ece552.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
